cabal-version:      3.0
name:               nixfmt
version:            0.6.0
synopsis:           Official formatter for Nix code 
description:
  A formatter for Nix that ensures consistent and clear formatting by forgetting
  almost all existing formatting during parsing.

homepage:           https://github.com/NixOS/nixfmt
bug-reports:        https://github.com/NixOS/nixfmt/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Serokell <hi@serokell.io> and nixfmt contributors
copyright:          Serokell <hi@serokell.io> and nixfmt contributors
category:           Development
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: git://github.com/NixOS/nixfmt.git

executable nixfmt
  main-is:          Main.hs
  other-modules:
    Paths_nixfmt
    System.IO.Atomic
    System.IO.Utf8

  autogen-modules:  Paths_nixfmt
  hs-source-dirs:   main
  build-depends:
    , base             >=4.12.0  && <4.21
    , bytestring
    , cmdargs          >=0.10.20 && <0.11
    , directory        >=1.3.3   && <1.4
    , file-embed
    , filepath         >=1.4.2   && <1.5
    , nixfmt
    , safe-exceptions  >=0.1.7   && <0.2
    , text             >=1.2.3   && <2.2
    , unix             >=2.7.2   && <2.9

  -- for System.IO.Atomic
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -threaded

library
  exposed-modules:
    Nixfmt
    Nixfmt.Lexer
    Nixfmt.Parser
    Nixfmt.Parser.Float
    Nixfmt.Predoc
    Nixfmt.Pretty
    Nixfmt.Types
    Nixfmt.Util

  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    FlexibleInstances
    LambdaCase
    NamedFieldPuns
    OverloadedLists
    OverloadedStrings
    PackageImports
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators

  hs-source-dirs:     src
  build-depends:
    , base                >=4.12.0 && <4.21
    , containers
    , deepseq
    , megaparsec          >=9.0.1  && <9.6
    , mtl
    , parser-combinators  >=1.0.3  && <1.4
    , pretty-simple
    , scientific          >=0.3.0  && <0.4.0
    , text                >=1.2.3  && <2.2
    , transformers
    , vector

  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wno-orphans
