cabal-version:       3.8
name:                nixfmt
version:             1.3.1
synopsis:            Official formatter for Nix code
description:
  Nixfmt is the official formatter for Nix language code.
homepage:            https://github.com/NixOS/nixfmt
bug-reports:         https://github.com/NixOS/nixfmt/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Serokell <hi@serokell.io> and Nix Formatting Team
copyright:           Serokell <hi@serokell.io> and Nix Formatting Team
maintainer:          Nix Formatting Team
category:            Development
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/NixOS/nixfmt.git

flag werror
  description: Treat warnings as errors
  default: True
  manual: True

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wno-orphans

  if flag(werror)
    ghc-options:
      -Werror

  -- the executable name nixfmt and the library namespace Nixfmt can collide on
  -- darwin due to case insentivity on APFS
  if os(darwin)
    ghc-options:
      -optP-Wno-nonportable-include-path

executable nixfmt
  import: warnings

  main-is:             Main.hs
  other-modules:
    Paths_nixfmt
    System.IO.Utf8
    System.IO.Atomic
  autogen-modules:
    Paths_nixfmt
  other-extensions:    DeriveDataTypeable
  hs-source-dirs:      main
  build-depends:
      base             >= 4.12.0
    , bytestring
    , cmdargs          >= 0.10.20
    , file-embed
    , nixfmt
    , unix             >= 2.7.2
    , text             >= 1.2.3
    , transformers
    , process

    -- for System.IO.Atomic
    , directory        >= 1.3.3
    , filepath         >= 1.4.2
    , safe-exceptions  >= 0.1.7
  default-language:    Haskell2010
  ghc-options:
    -threaded

library
  import: warnings

  exposed-modules:
    Nixfmt
    Nixfmt.Lexer
    Nixfmt.Parser
    Nixfmt.Parser.Float
    Nixfmt.Postprocess
    Nixfmt.Predoc
    Nixfmt.Pretty
    Nixfmt.Types
    Nixfmt.Util

  default-extensions:
    PackageImports

  other-extensions:
    DeriveFoldable
    DeriveFunctor
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections

  hs-source-dirs:      src
  build-depends:
      base             >= 4.12.0
    , containers
    , megaparsec       >= 9.0.1
    , mtl
    , parser-combinators >= 1.0.3
    , scientific       >= 0.3.0
    , text             >= 1.2.3
    , transformers
    , pretty-simple
  default-language:    Haskell2010
